crates/vox-integration-tests/tests/pipeline/includes/snapshots/pipeline_test__bind_loginform_tsx_expand.snap
---
source: crates/vox-integration-tests/tests/pipeline/includes/include_01.rs
expression: component.1
---
import React, { useState } from "react";

export function LoginForm(): React.ReactElement {
    const [email, set_email] = useState("");
  return (
<input className={"email-field"} value={email} onChange={(e) => set_email(e.target.value)} />
  );
}
