crates/vox-integration-tests/tests/pipeline/includes/snapshots/pipeline_test__chatbot_chat_tsx_usestate.snap
---
source: crates/vox-integration-tests/tests/pipeline/includes/include_01.rs
expression: chat.1
---
import React, { useState } from "react";

export function Chat(): React.ReactElement {
    const [messages, set_messages] = useState([{ role: "bot", text: "" }]);
    const [input, set_input] = useState("");
    const send = ((_e) => (set_messages(messages.append({ role: "user", text: input }))));
  return (
    <div className={["flex", "flex-col", "chat-container"].filter(Boolean).join(" ")}>
      <div className={["flex", "flex-col", "chat-title"].filter(Boolean).join(" ")}>
        {"Vox Chatbot"}
      </div>
      <button className={["inline-flex", "items-center", "justify-center", "rounded-md", "text-sm", "font-medium", "ring-offset-background", "transition-colors", "focus-visible:outline-none", "focus-visible:ring-2", "focus-visible:ring-ring", "focus-visible:ring-offset-2", "disabled:pointer-events-none", "disabled:opacity-50", "bg-primary", "text-primary-foreground", "hover:bg-primary/90", "h-10", "px-4", "py-2", "send-btn"].filter(Boolean).join(" ")} onClick={send}>
        {"Send"}
      </button>
    </div>
  );
}
