crates/vox-integration-tests/tests/pipeline/includes/snapshots/pipeline_test__chatbot_fixture_chat_css.snap
---
source: crates/vox-integration-tests/tests/pipeline/includes/include_01.rs
expression: chat_css.1
---
.chat_container {
  display: flex;
  flexDirection: column;
}
.messages {
  flex: 1;
  overflowY: auto;
  display: flex;
  flexDirection: column;
}
.input_area {
  display: flex;
}
