crates/vox-integration-tests/tests/pipeline/includes/snapshots/pipeline_test__chatbot_server_ts_express_actor.snap
---
source: crates/vox-integration-tests/tests/pipeline/includes/include_01.rs
expression: server.1
---
import express, { Request, Response } from "express";
import cors from "cors";

const app = express();
app.use(cors());
app.use(express.json());

app.post("/api/claude_send", async (req: Request, res: Response) => {
  try {
    const msg = req.body.msg;
    Ok("ok");
  } catch (err) {
    res.status(500).json({ error: String(err) });
  }
});

app.post("/api/mutation/api_chat", async (req: Request, res: Response) => {
  try {
    const prompt = req.body.prompt;
    const result = Ok("ok");
    res.json({ text: result });
  } catch (err) {
    res.status(500).json({ error: String(err) });
  }
});

const PORT = process.env.PORT || 3001;
app.listen(PORT, () => {
  console.log(`Vox server running on port ${PORT}`);
});
