crates/vox-integration-tests/tests/pipeline/includes/snapshots/pipeline_test__dashboard_e2e_chatwidget_tsx.snap
---
source: crates/vox-integration-tests/tests/pipeline/includes/include_01.rs
expression: chat.1
---
import React, { useState } from "react";

export function ChatWidget(): React.ReactElement {
    const [messages, set_messages] = useState([]);
    const [input, set_input] = useState("");
  return (
<div className={"chat"}
>
  <input value={input} onChange={(e) => set_input(e.target.value)} />
  <button onClick={() => {
    ((e) => (set_input("")));
}}
>
  {"Send"}
</button>
</div>
  );
}
