crates/vox-integration-tests/tests/pipeline/includes/snapshots/pipeline_test__dashboard_e2e_routes_manifest_ts.snap
---
source: crates/vox-integration-tests/tests/pipeline/includes/include_01.rs
expression: m.1
---
// Generated by Vox — framework-agnostic route manifest.
// Source: WebIR RouteTree → TS (see valid gates: VOX_WEBIR_VALIDATE).
// Adapter: import { voxRoutes } from "./routes.manifest" in your App.tsx.

import type { ComponentType } from "react"
import { ChatWidget } from "./ChatWidget.tsx"
import { Dashboard } from "./Dashboard.tsx"

export type VoxRoute = {
  path: string
  component: ComponentType<any>
  loader?: (ctx: { params: Record<string, string> }) => Promise<unknown>
  pendingComponent?: ComponentType
  errorComponent?: ComponentType<{ error: Error }>
  children?: VoxRoute[]
  index?: boolean
}

export const voxRoutes: VoxRoute[] = [
{
  path: "/",
  component: Dashboard,
  index: true,
},
{
  path: "/chat",
  component: ChatWidget,
},
]

// Phase C part 2: typed route URL surface.
// Use `routePath["/users/:id"](userId)` instead of hand-formatting URLs.
export type KnownRoute =
  | "/"
  | "/chat";

export const routePath = {
  "/": (): string => "/",
  "/chat": (): string => "/chat",
} as const;
